# MECFS_database_manager

./: .dockerignore  README.md  app.py  export_tabs.py  program_actions.py  pyproject.toml  set_up_globals.py
data/: assay_classes.py  assay_results.py  biospecimens.py  clinical_data.py  cytokines.py  data_label_types.py  ensembl_geneids.py  ensembl_transcriptids.py  event_log.py  gene_symbols.py  metabolomics.py  mongo_setup.py  proteomics.py  redcap.py  scrnaseq_summary.py  users.py
docker/: Dockerfile  docker-compose.yml
services/: convet_betsys_spreadsheet.py  data_service.py
src/: __init__.py
src/mecfs_ui/: __init__.py  __main__.py
src/mecfs_ui/components/: __init__.py  auth.py  export_tabs.py  file_handlers.py  import_tabs.py  query_tabs.py
