[project]
name = "mecfs-db-manager"
version = "1.0.0"
description = "ME/CFS Database Manager with Gradio Web UI"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.0.0",
    "mongoengine>=0.27.0",
    "pymongo>=4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "colorama>=0.4.6",
    "python-dateutil>=2.8.0",
    "biopython>=1.79",
    "scipy>=1.8.0",
    "scikit-learn>=1.0.2",
    "matplotlib>=3.5.1",
    "seaborn>=0.11.2",
    "dash>=2.0.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mecfs_ui", "data", "services", "infrastructure"]
